--- a/templates/email.html
+++ b/templates/email.html
@@ -109,7 +109,7 @@
                               color: #232323;
                               text-align: center;
                             " class="padding message-content">
-                          <h2>New Appointment Request</h2>
+                          <h2>Нова Заявка!</h2>
                           <div class="form-container">${htmlData}</div>
                         </td>
                       </tr>
